--- a/modules/siddhi-extensions/eval-script/pom.xml
+++ b/modules/siddhi-extensions/eval-script/pom.xml
@@ -77,6 +77,14 @@
                     </instructions>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.13</version>
+                <configuration>
+                    <argLine>-Djava.library.path=${env.JRI_HOME}</argLine>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
@@ -111,6 +119,21 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.lucarosellini.rJava</groupId>
+            <artifactId>JRI</artifactId>
+            <version>${r.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.lucarosellini.rJava</groupId>
+            <artifactId>JRIEngine</artifactId>
+            <version>${r.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.lucarosellini.rJava</groupId>
+            <artifactId>REngine</artifactId>
+            <version>${r.version}</version>
+        </dependency>
     </dependencies>
 
     <repositories>
@@ -119,5 +142,7 @@
             <url>https://oss.sonatype.org/content/repositories/releases/</url>
         </repository>
     </repositories>
-
+    <properties>
+        <r.version>0.9-7</r.version>
+    </properties>
 </project>
